<resources>
    <string name="app_name">PetMe</string>
    <string name="mandatoryField">* Campo obligatorio</string>
    <string name="google_maps_key">AIzaSyDqkwJf2lsY0qippCymd597EfrqesCajoI</string>

    <!--Login-->
    <string name="slogan">Encuentra a tu nuevo mejor amigo</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="errorLogIn">ERROR: Email o contraseña incorrectos</string>
    <string name="signIn">Ingresar</string>
    <string name="dontHaveAccount">Aún no tienes cuenta?</string>
    <string name="signUp">Registrate</string>

    <!--SignUp-->
    <string name="logIn">Log in</string>
    <string name="createAccount">Crear cuenta</string>
    <string name="lastName">Apellido</string>
    <string name="name">Nombre</string>
    <string name="birthdate">Fecha de nacimiento</string>
    <string name="province">Provincia</string>
    <string name="city">Ciudad</string>
    <string name="select">Seleccione</string>
    <string name="takePhoto">Tomar foto</string>
    <string name="uploadPhoto">Subir foto</string>

    <!--Home-->
    <string name="myProfile">Mi perfil</string>
    <string name="adoptPet">Adoptar mascota</string>
    <string name="donatePet">Dar mascota en adopción</string>
    <string name="foundPets">Mascotas encontradas</string>
    <string name="lostPets">Mascotas perdidas</string>
    <string name="findVeterinary">Buscar veterinarias</string>
    <string name="signOut">Cerrar Sesión</string>

    <!-- Pets list -->
    <string name="filter">+ Filtrar</string>
    <string name="mapView">Ver Mapa</string>
    <string name="viewProfile">Ver perfil</string>
    <string name="foundFriend">Elije a tu nuevo amigo</string>


    <!--MyProfile-->
    <string name="home">Home</string>
    <string name="workSituation">Situación laboral</string>
    <string name="description">Descripción</string>
    <string name="phone">Teléfono</string>
    <string name="editProfile">Editar perfil</string>
    <string name="myCollection">Mi colección</string>
    <string name="unknownDescription">Descripción desconocida</string>
    <string name="unknownSituation">Situación desconocida</string>
    <string name="unknownPhone">Teléfono desconocido</string>
    <!--Profile collection-->
    <string name="myFavPets">Mis mascotas favoritas</string>
    <string name="myDonatePets">Mis mascotas en adopción</string>
    <string name="myFoundPets">Mis mascotas encontradas</string>
    <string name="myLostPets">Mis mascotas perdidas</string>
    <string name="myVeterinaries">Mis veterinarias</string>

    <!--Add pet-->
    <string name="uploadFoundPets">Agregar Mascota encontrada</string>
    <string name="race">Raza</string>
    <string name="gender">Género</string>
    <string name="maxCharacters">[300 caractéres máx.]</string>
    <string name="foundLocation">Cargar ubicación</string>
    <string name="uploadPet">Cargar mascota</string>
    <string name="type">Tipo</string>
    <string name="mustAddAPhoto">* Debe agregar una foto</string>

    <!--Pet location-->
    <string name="confirmLocation">Confirmar</string>
    <string name="selectLocation">Seleccione la ubicación</string>

    <!--Pet profile-->
    <string name="weight">Peso</string>
    <string name="deletePetProfile">Dar de baja perfil</string>
    <string name="contactResponsable">Contactar al responsable</string>
    <string name="addToFavourites">Agregar a favoritos</string>
    <string name="responsable">Publicado por</string>
    <string name="unknownName">Nombre desconocido</string>
    <string name="unknownAge">Edad desconocida</string>
    <string name="unknownWeight">Peso desconocido</string>
    <string name="unknownRace">Raza desconocida</string>

</resources>