<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/space_black"
    tools:context=".activities.HomeActivity">

    <ImageView
        android:id="@+id/homeImageView"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />

    <TextView
        android:id="@+id/petMeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cantora_one"
        android:text="@string/app_name"
        android:textColor="@color/full_white"
        android:textSize="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeImageView" />

    <Button
        android:id="@+id/myProfileButton"
        style="@style/Theme.App.Button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/space_grey"
        android:drawableLeft="@drawable/ic_user_profile"
        android:text="@string/myProfile"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petMeTextView" />

    <Button
        android:id="@+id/adoptPetButton"
        style="@style/Theme.App.Button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/space_grey"
        android:drawableLeft="@drawable/ic_adopt_pet"
        android:text="@string/adoptPet"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myProfileButton" />

    <Button
        android:id="@+id/donatePetButton"
        style="@style/Theme.App.Button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/space_grey"
        android:drawableLeft="@drawable/ic_donate_pet"
        android:text="@string/donatePet"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adoptPetButton" />

    <Button
        android:id="@+id/foundPetsButton"
        style="@style/Theme.App.Button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/space_grey"
        android:drawableLeft="@drawable/ic_found_pet"
        android:text="@string/foundPets"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donatePetButton" />

    <Button
        android:id="@+id/lostPetsButton"
        style="@style/Theme.App.Button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/space_grey"
        android:drawableLeft="@drawable/ic_lost_pet"
        android:text="@string/lostPets"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foundPetsButton" />

    <Button
        android:id="@+id/findVeterinaryButton"
        style="@style/Theme.App.Button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/space_grey"
        android:drawableLeft="@drawable/ic_veterinary"
        android:text="@string/findVeterinary"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lostPetsButton" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/findVeterinaryButton">

        <ImageView
            android:id="@+id/signOutImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_sign_out" />

        <TextView
            android:id="@+id/signOutTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signOut"
            android:textColor="@color/full_white"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>