<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F3F3"
    tools:context=".activities.LostPetsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/lostPetsToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/Theme.App.Toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="@string/home"
        app:titleTextColor="@color/full_white" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:lineSpacingExtra="30dp"
        android:text="@string/lostPets"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:typeface="normal"
        app:layout_constraintEnd_toStartOf="@+id/filterTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lostPetsToolbar" />

    <TextView
        android:id="@+id/filterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/filter"
        android:textColor="@color/green_aquamarine_light"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintBaseline_toBaselineOf="@+id/titleTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/mapViewButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="@color/green_aquamarine"
        android:paddingTop="13dp"
        android:paddingBottom="13dp"
        android:text="@string/mapView"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <fragment
        android:id="@+id/petsFragment"
        android:name="com.dam.petme.fragments.PetCardFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapViewButton" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="Agregar mascota"
        app:backgroundTint="@color/yellow_mustard"
        app:fabCustomSize="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add_24"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>